# assert

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  CODE_GUIDELINES.md  Dockerfile  Doxyfile  Makefile  README.md  ci-component-test.sh  docker-ci.sh
.github/: copilot-instructions.md
.github/workflows/: cmake-single-platform.yml  doxygen.yml  release.yml
asrtc/: .clang-tidy  CMakeLists.txt  allocator.c  allocator.h  assembly.c  assembly.h  callbacks.h  cntr_assm.c  cntr_assm.h  collect.c  collect.h  controller.c  controller.h  default_allocator.h  default_error_cb.h  diag.c  diag.h  handlers.h  param.c  param.h  result.h  status.h  status_to_str.h  stream.c  stream.h  test_result_to_str.h
asrtcpp/: CMakeLists.txt  cntr_assm.hpp  collect.hpp  controller.cpp  controller.hpp  diag.hpp  fmt.hpp  param.hpp  stream.cpp  stream.hpp
asrtio/: CMakeLists.txt  cntr_stream_sys.cpp  cntr_stream_sys.hpp  cntr_tcp_sys.hpp  demo.hpp  euv.hpp  main.cpp  output_fs.hpp  param_config.cpp  param_config.hpp  pbar.hpp  real_fs.hpp  rsim.hpp  task.hpp  transport.cpp  transport.hpp  util.cpp  util.hpp
asrtl/: .clang-tidy  CMakeLists.txt  allocator.c  allocator.h  asrt_assert.h  asrtl_assert.h  assert.h  chann.c  chann.h  cobs.c  cobs.h  collect_proto.h  core_proto.h  diag_proto.h  ecode.h  ecode_to_str.h  flat_tree.c  flat_tree.h  log.h  param_proto.h  proto.h  proto_version.h.in  source.h  source_to_str.h  span.h  status.h  status_to_str.h  stream_proto.h  util.c  util.h
asrtlpp/: CMakeLists.txt  callback.hpp  flat_type_traits.hpp  fmt.hpp  sender.hpp  status_sender.hpp  task.hpp  util.hpp
asrtr/: .clang-tidy  CMakeLists.txt  asrtr.c  assembly.h  collect.c  collect.h  diag.c  diag.h  param.c  param.h  reac_assm.c  reac_assm.h  reactor.c  reactor.h  record.h  status.h  status_to_str.h  stream.c  stream.h
asrtrpp/: CMakeLists.txt  collect.hpp  collect_sender.hpp  diag.hpp  fmt.hpp  param.hpp  param_sender.hpp  reac_assm.hpp  reactor.cpp  reactor.hpp  stream.hpp  stream_sender.hpp  task_unit.hpp  util.hpp
cmake/: CPM.cmake  asrtConfig.cmake.in  asrtCxxConfig.cmake.in
html/: allocator_8h_source.html  asrt__assert_8h_source.html  asrtc_2collect_8h_source.html  asrtc_2diag_8h_source.html  asrtc_2param_8h_source.html  asrtc_2stream_8h_source.html  asrtcpp_2collect_8hpp_source.html  asrtcpp_2diag_8hpp_source.html  asrtcpp_2param_8hpp_source.html  asrtcpp_2stream_8hpp_source.html  asrtr_2collect_8h_source.html  asrtr_2diag_8h_source.html  asrtr_2param_8h_source.html  asrtr_2stream_8h_source.html  asrtrpp_2collect_8hpp_source.html  asrtrpp_2diag_8hpp_source.html  asrtrpp_2param_8hpp_source.html  asrtrpp_2stream_8hpp_source.html  callback_8hpp_source.html  chann_8h_source.html  cntr__assm_8h_source.html  cobs_8h_source.html  collect__proto_8h_source.html  controller_8h_source.html  controller_8hpp_source.html  core__proto_8h_source.html  diag__proto_8h_source.html  doxygen.css  flat__tree_8h_source.html  flat__type__traits_8hpp_source.html  fmt_8hpp_source.html  handlers_8h_source.html  log_8h_source.html  param__proto_8h_source.html  reac__assm_8h_source.html  reactor_8h_source.html  reactor_8hpp_source.html  record_8h_source.html  result_8h_source.html  source_8h_source.html  (+97 more)
html/search/: all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_8.js  all_9.js  all_b.js  all_d.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  concepts_0.js  concepts_1.js  concepts_2.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  (+33 more)
plan/: README.md  issues.md  status.md
test/: CMakeLists.txt  asrtc_test.c  asrtc_test.cpp  asrtcpp_test.cpp  asrtio_test.cpp  asrtl_test.c  asrtl_test.cpp  asrtr_test.c  asrtr_test.cpp  asrtr_tests.h  asrtrpp_test.cpp  collector.h  collector.hpp  mutatest.cpp  pbar_demo.cpp  rsim.cpp  stub_allocator.hpp  stub_fs.hpp  util.h  util.hpp
test/component/controller/: CMakeLists.txt  main.cpp
test/component/reactor/: CMakeLists.txt  main.c
